// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Review form Container Should render review form with loading true 1`] = `
<ReviewFormContainer
  formData={
    Object {
      "loading": true,
    }
  }
  initializeAction={
    [MockFunction] {
      "calls": Array [
        Array [
          undefined,
          null,
        ],
      ],
    }
  }
>
  <div
    className="review-form-container"
  >
    <h3>
      Create Review
    </h3>
    <LoadingPanel>
      <div
        className="loading-panel"
      >
        <div
          className="loading-panel__text"
        >
          <h5>
            Loading...
          </h5>
        </div>
        <div
          className="loading-panel__icon"
        >
          <OTFLoadingIcon>
            <svg
              className="logo-loading"
              viewBox="0 0 45 40"
            >
              <g
                fill="none"
                fillRule="nonzero"
              >
                <rect
                  className="logo-part logo-part-1"
                  fill="#25AAE1"
                  height="5"
                  transform="translate(10 0)"
                  width="5"
                />
                <rect
                  className="logo-part logo-part-2"
                  fill="#25AAE1"
                  height="5"
                  transform="translate(5 5)"
                  width="5"
                />
                <rect
                  className="logo-part logo-part-3"
                  fill="#25AAE1"
                  height="5"
                  transform="translate(0 10)"
                  width="5"
                />
                <rect
                  className="logo-part logo-part-4"
                  fill="#25AAE1"
                  height="5"
                  transform="translate(0 15)"
                  width="5"
                />
                <rect
                  className="logo-part logo-part-5"
                  fill="#25AAE1"
                  height="5"
                  transform="translate(0 20)"
                  width="5"
                />
                <rect
                  className="logo-part logo-part-6"
                  fill="#25AAE1"
                  height="5"
                  transform="translate(0 25)"
                  width="5"
                />
                <rect
                  className="logo-part logo-part-7"
                  fill="#25AAE1"
                  height="5"
                  transform="translate(5 30)"
                  width="5"
                />
                <rect
                  className="logo-part logo-part-8"
                  fill="#25AAE1"
                  height="5"
                  transform="translate(10 35)"
                  width="5"
                />
                <rect
                  className="logo-part logo-part-9"
                  fill="#25AAE1"
                  height="5"
                  transform="translate(30 0)"
                  width="5"
                />
                <rect
                  className="logo-part logo-part-10"
                  fill="#25AAE1"
                  height="5"
                  transform="translate(35 5)"
                  width="5"
                />
                <rect
                  className="logo-part logo-part-11"
                  fill="#25AAE1"
                  height="5"
                  transform="translate(40 10)"
                  width="5"
                />
                <rect
                  className="logo-part logo-part-12"
                  fill="#25AAE1"
                  height="5"
                  transform="translate(40 15)"
                  width="5"
                />
                <rect
                  className="logo-part logo-part-13"
                  fill="#25AAE1"
                  height="5"
                  transform="translate(40 20)"
                  width="5"
                />
                <rect
                  className="logo-part logo-part-14"
                  fill="#25AAE1"
                  height="5"
                  transform="translate(40 25)"
                  width="5"
                />
                <rect
                  className="logo-part logo-part-15"
                  fill="#25AAE1"
                  height="5"
                  transform="translate(35 30)"
                  width="5"
                />
                <rect
                  className="logo-part logo-part-16"
                  fill="#25AAE1"
                  height="5"
                  transform="translate(30 35)"
                  width="5"
                />
              </g>
            </svg>
          </OTFLoadingIcon>
        </div>
      </div>
    </LoadingPanel>
  </div>
</ReviewFormContainer>
`;

exports[`Test Review form Container Should render review with loading false & saveAsDraft false & review id exists 1`] = `
<div
  className="review-form-container"
>
  <h3>
    Update Review
  </h3>
  <withSaga(withReducer(Connect(withRouter(FormContainer))))
    formId="myIntialForm"
    metadata={
      Object {
        "actions": Array [
          Object {
            "callback": [Function],
            "text": "back",
            "type": "secondary",
          },
          Object {
            "callback": [Function],
            "text": "Update",
            "type": "primary",
          },
          Object {
            "callback": [Function],
            "text": "Delete",
            "type": "warning",
          },
        ],
        "fields": Array [],
        "initialValues": Array [],
      }
    }
  />
</div>
`;

exports[`Test Review form Container Should render review with loading false & saveAsDraft false 1`] = `
<div
  className="review-form-container"
>
  <h3>
    Create Review
  </h3>
  <withSaga(withReducer(Connect(withRouter(FormContainer))))
    formId="myIntialForm"
    metadata={
      Object {
        "actions": Array [
          Object {
            "callback": [Function],
            "text": "back",
            "type": "secondary",
          },
          Object {
            "callback": [Function],
            "text": "Save Draft",
            "type": "secondary",
          },
          Object {
            "callback": [Function],
            "text": "Create",
            "type": "primary",
          },
        ],
        "fields": Array [
          Object {
            "type": "type1",
          },
          Object {
            "type": "TypedChoiceField",
          },
        ],
        "initialValues": Array [],
      }
    }
  />
</div>
`;

exports[`Test Review form Container Should render review with loading false 1`] = `
<div
  className="review-form-container"
>
  <h3>
    Update Review
  </h3>
  <withSaga(withReducer(Connect(withRouter(FormContainer))))
    formId="myIntialForm"
    metadata={
      Object {
        "actions": Array [
          Object {
            "callback": [Function],
            "text": "back",
            "type": "secondary",
          },
          Object {
            "callback": [Function],
            "text": "Update Draft",
            "type": "secondary",
          },
          Object {
            "callback": [Function],
            "text": "Update",
            "type": "primary",
          },
          Object {
            "callback": [Function],
            "text": "Delete",
            "type": "warning",
          },
        ],
        "fields": Array [],
        "initialValues": Array [],
      }
    }
  />
</div>
`;
